fixed sidebar overflow

--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,9 @@ body {
 .homepage {
   display: grid;
   grid-template-columns: repeat(4, auto);
+  grid-template-rows: repeat(4, auto);
+}
+
+.sideBar {
+  grid-row: 1/3;
 }
